--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,5 @@
 common:
-  debug: true
+  debug: true #为true 应用会打印debug级别的日志，否则为Error级别；mysql会打印info级别的日志，否则为Error级别
 
 grpc_server:
   name: "testAppGrpc"
