--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,15 +2,23 @@ common:
   debug: true #为true 应用会打印debug级别的日志，否则为Error级别；mysql会打印info级别的日志，否则为Error级别
 
 grpc_server:
+  switch: false
   name: "testAppGrpc"
   addr: ":2222"
 
-server:
+http_server:
+  switch: true
   name: "testApp"
   addr: "127.0.0.1:8080"
   mode: "debug"
   trusted_proxies:
     - "0.0.0.0"
+
+cron_server:
+  switch: false
+
+swagger:
+  switch: false
 
 db:
   name: "default"
