--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,12 +3,12 @@ common:
 
 grpc_server:
   switch: false
-  name: "testAppGrpc"
+  name: "myAppGrpc"
   addr: ":2222"
 
 http_server:
   switch: true
-  name: "testApp"
+  name: "myAppHttp"
   addr: "127.0.0.1:8080"
   mode: "debug"
   trusted_proxies:
